--- a/src/client/components/app/app.css
+++ b/src/client/components/app/app.css
@@ -17,7 +17,12 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  height: 20px;
+  height: 36px;
   background: white;
-  opacity: 0.7;
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+
+.app__panel:hover {
+  opacity: 1;
 }
