add progress and volume controls

--- a/src/client/components/app/app.css
+++ b/src/client/components/app/app.css
@@ -7,22 +7,30 @@ body {
   position: relative;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: stretch;
-  justify-content: center;
+  justify-content: flex-start;
   overflow: hidden;
 }
 
-.app__panel {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 36px;
-  background: white;
-  opacity: 0;
-  transition: opacity 0.2s linear;
+.app__player {
+  flex-grow: 1;
+  position: relative;
 }
 
-.app__panel:hover {
-  opacity: 1;
+.app__player .player {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.app__panel {
+  height: 36px;
+  min-height: 36px;
+  flex-grow: 0;
+  background: white;
+  position: relative;
+  z-index: 10;
 }
