--- a/src/client/components/panel/panel.css
+++ b/src/client/components/panel/panel.css
@@ -1,3 +1,14 @@
-.player-panel .panel-btn {
-  vertical-align: middle;
+.player-panel {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.player-panel__progress {
+  flex-grow: 1;
+  padding: 0 15px;
+}
+
+.player-panel__volume {
+  padding: 0 15px;
 }
