--- a/src/client/components/app/app.css
+++ b/src/client/components/app/app.css
@@ -11,6 +11,7 @@ body {
   align-items: stretch;
   justify-content: flex-start;
   overflow: hidden;
+  width: 100%;
 }
 
 .app__player {
@@ -33,4 +34,18 @@ body {
   background: white;
   position: relative;
   z-index: 10;
+}
+
+.app--fullscreen .app__panel {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  opacity: 0;
+  transition: opacity var(--def-trans-speed) linear;
+}
+
+.app--fullscreen .app__panel:hover {
+  opacity: 1;
 }
